--- a/reg.html
+++ b/reg.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Reg</title>
+    <link rel="stylesheet" href="C:/Users/madFirst/Desktop/задание№1/css/main.css">
 </head>
 <body>
 
@@ -17,11 +18,9 @@
     <input type="email" name="email" placeholder="Введите адрес своей почты" required>
     <label>Имя</label>
     <input type="text" name="name" placeholder="Введите свое имя" required>
-    <button type="submit" class="register-btn">Зарегистрироваться</button>
+    <button type="submit" class="reg_">Зарегистрироваться</button>
     <p>
         У вас уже есть аккаунт? - <a href="log.html">авторизируйтесь</a>!
     </p>
 </form>
-
-</body>
 </html>
