--- a/log.html
+++ b/log.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
-<head>
+    <head>
     <meta charset="UTF-8">
     <title>log </title>
-
+    <link rel="stylesheet" href="C:/Users/madFirst/Desktop/задание№1/css/main.css">
 </head>
 <body>
     <form>
@@ -11,11 +11,11 @@
         <input type="text" name="login" placeholder="Введите логин">
         <label>Пароль</label>
         <input type="password" name="password" placeholder="Введите пароль">
-        <h1>123</h1>
-    </form>
-    <p>
-        У вас нет аккаунта? - <a href="reg.html">зарегистрируйтесь</a>!
-    </p>
+        <button type="submit" class="log_">Войти</button>
 
+    <p>
+   У вас нет аккаунта? - <a href="reg.html">зарегистрируйтесь</a>!
+</p>
+</form>
 </body>
 </html>
